minor alignment fixes

--- a/editor/editor.css
+++ b/editor/editor.css
@@ -1143,8 +1143,12 @@ main {
 
   > div {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
     gap: 0.425rem;
+    
+    @media(width < 600px) {
+      grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+    }
   }
   button {
     background-color: var(--g-btn-bg);
