--- a/styles/main.css
+++ b/styles/main.css
@@ -2136,6 +2136,7 @@ form textarea::-webkit-scrollbar {
   width: 100%;
   height: 100%;
   display: block;
+  border: none;
 }
 @media (width < 1300px) {
   .preview-modal-content {
@@ -2169,6 +2170,7 @@ form textarea::-webkit-scrollbar {
   gap: 0.5rem;
 }
 .preview-extra-feature-container button {
+  display: grid;
   background-color: var(--global-button-bg);
   color: var(--global-button-clr);
   border-radius: 0.225rem;
@@ -2179,6 +2181,15 @@ form textarea::-webkit-scrollbar {
 }
 .preview-extra-feature-container button:hover {
   background-color: var(--global-button-hover-bg);
+}
+
+.preview-project-description {
+  position: absolute;
+  bottom: -55px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  font-size: 0.925rem;
 }
 
 .display-preview-modal.show {
